--- a/baseproject/templates/baseproject/modal_load_file.html
+++ b/baseproject/templates/baseproject/modal_load_file.html
@@ -115,4 +115,14 @@
       </div>
     </div>
   </div>
+<script>
+  window.SPS_UPLOAD_URLS = {
+    SRC_SPS: "{% url 'upload_source_sps' %}",
+    REC_SPS: "{% url 'upload_receiver_sps' %}",
+    HDR_SPS: "{% url 'upload_header_sps' %}",
+  };
+   window.SHP_SEARCH_URL = "{% url 'shape_search' %}";
+
+
+</script>
 
