--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -10,7 +10,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/site.css' %}">
   <link rel="stylesheet" href="{% static 'baseproject/css/app.css' %}">
-
+  <link href="https://cdn.bokeh.org/bokeh/release/bokeh-3.8.2.min.css" rel="stylesheet">
   {% block extra_head %}{% endblock %}
 </head>
 <body class="bg-light">
@@ -28,13 +28,26 @@
      id="toastContainer"
      style="z-index: 1100;">
 </div>
-
+  {% include "partials/toast_ok.html" %}
   <footer class="text-center text-muted py-4">
     <small>&copy; {{ now|date:"Y" }} SeisWebLog Demo</small>
   </footer>
-
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://unpkg.com/lottie-web/build/player/lottie.min.js"></script>
   <script type="module" src="{% static 'baseproject/js/app.js' %}"></script>
+  <script
+    src="https://cdn.bokeh.org/bokeh/release/bokeh-3.8.2.min.js">
+  </script>
+
+  <!-- Optional: widgets & tables -->
+  <script
+    src="https://cdn.bokeh.org/bokeh/release/bokeh-widgets-3.8.2.min.js">
+  </script>
+  <script
+    src="https://cdn.bokeh.org/bokeh/release/bokeh-tables-3.8.2.min.js">
+  </script>
   {% block extra_js %}{% endblock %}
 </body>
 </html>
