--- a/baseproject/templates/baseproject/modal/csv_upload_modal.html
+++ b/baseproject/templates/baseproject/modal/csv_upload_modal.html
@@ -21,39 +21,43 @@
                                            <select id="selPointName" name="pointfield" class="form-select form-control"></select>
                                        </div>
                                       <div class="mb-2">
-                                          <label for="selX" class="form-label">X-Coordinate</label>
+                                          <label for="selX" class="form-label">X-Coordinate(Easting)</label>
                                            <select id="selX" name="xfield" class="form-select"></select>
                                       </div>
                                       <div class="mb-2">
-                                           <label for="selY" class="form-label">Y-coordinate</label>
+                                           <label for="selY" class="form-label">Y-coordinate(Northing)</label>
                                            <select id="selY" name="yfield" class="form-select"></select>
                                       </div>
                                       <div class="mb-2">
 
 
-                                            <label for="selZ" class="form-label">Elevtion</label>
+                                            <label for="selZ" class="form-label">Z-coordinate(Elevation)</label>
                                             <select id="selZ" name="zfield" class="form-select"></select>
                                       </div>
                                       <div class="mt-2 mb-2">
-                                            <label for="attr1-name" class="form-label">Name for attribute1</label>
+                                            <label for="attr1-name" class="form-label">Name for Attr. I</label>
                                             <input id="attr1-name" name="attr1_name" value="Attribute One" class="form-control">
 
-                                            <label for="attr1" class="form-label">Attribute1</label>
+                                            <label for="attr1" class="form-label">Attribute column</label>
                                             <select id="attr1" name="attr1"  class="form-select"></select>
                                       </div>
                                        <div class="mb-2">
-                                            <label for="attr2-name" class="form-label">Name for attribute2</label>
+                                            <label for="attr2-name" class="form-label">Name for Attr. II</label>
                                             <input id="attr2-name" name="attr2_name" value="Attribute Two" class="form-control">
 
-                                            <label for="attr2" class="form-label">Attribute2</label>
+                                            <label for="attr2" class="form-label">Attribute column</label>
                                             <select id="attr2" name="attr2"  class="form-select"></select>
                                       </div>
                                        <div class="mb-2">
-                                            <label for="attr3-name" class="form-label">Name for attribute3</label>
+                                            <label for="attr3-name" class="form-label">Name for Attr. III</label>
                                             <input id="attr3-name" name="attr3_name" value="Attribute Three" class="form-control">
 
-                                            <label for="attr3" class="form-label">Attribute3</label>
+                                            <label for="attr3" class="form-label">Attribute column</label>
                                             <select id="attr3" name="attr3" class="form-select"></select>
+                                      </div>
+                                      <div class="mb-2">
+                                          <label for="attr3-name" class="form-label">Description</label>
+                                          <input id="comments" name="comments" value="N/A" class="form-control">
                                       </div>
                                    </form>
 <div id="csvErr" class="alert alert-danger d-none mt-2"></div>
